2017-04-27 Sergey Kashyrin <ska@kiska.net>

	* All fixes/updates of 2.0 main branch up to 2017-04-27 are retrofited.

2017-04-24 Sergey Kashyrin <ska@kiska.net>

	* All fixes/updates of 2.0 main branch up to 2017-03-31 are retrofited.
	* It does not make sense to repeat all of that here, as the dates are different
	* Please refer to the ChangeLog of the main 2.0 branch

2016-12-20 Sergey Kashyrin <ska@kiska.net>

	* codegen.cpp (output_long_integer): Bug fix. Use names for INDEXes

2015-11-25 Sergey Kashyrin <ska@kiska.net>

	* codegen.cpp (output_integer): cast program-pointer to unsigned char *,
	  not to void *

2015-11-25 Sergey Kashyrin <ska@kiska.net> Fix for Bug #152 according 2015-05-06  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.cpp: fixed CALL after physical CANCEL
	  by moving physical_cancel (defined in call.cpp) to cobglobptr->cob_physical_cancel
	  for check in COBOL modules

2014-12-20  Sergey Kashyrin <ska@kiska.net>

	* cobc.cpp : Fixing bug in filtering MSVC output

2014-12-17  Sergey Kashyrin <ska@kiska.net>

	* typeck.cpp, codegen.cpp : bug for COB_NON_ALIGNED
		  SET ADDRESS OF based UP/DOWN

2014-12-03  Sergey Kashyrin <ska@kiska.net>

	* naming.cpp : Fixed memory corruption
	* vcache.h : Use delete [] instead of delete (which is correct but does not matter - valgrind warning).

2014-12-03  Sergey Kashyrin <ska@kiska.net>

	* cobc.cpp : Bug "cobc -c prog.cob" compiling as "main" and not as "module"

	* codegen.c (output_size): Fix Bug #146 reference modification
	  ignored ODO size

2014-11-18  Sergey Kashyrin <ska@kiska.net>

	* retrofit of 2014-11-06  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
	  typeck.c (decimal_expand): fix bug #106 allocating cob_decimal too often 

2014-11-17  Sergey Kashyrin <ska@kiska.net>

	* field.cpp : http://sourceforge.net/p/open-cobol/bugs/89/

2014-11-14  Sergey Kashyrin <ska@kiska.net>

	* codegen.cpp : http://sourceforge.net/p/open-cobol/bugs/57/